using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants
{
    public const string SPEED_F = "Speed";
    public const string VERTICALSPEED_F = "VerticalSpeed";
    public const string ISGROUNDED_B = "IsGrounded";
    public const string ISJUMPING_B = "IsJumping";
}